--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,6 +9,7 @@ on:
       - main
     paths-ignore:
       - 'docs/**'
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -19,7 +20,7 @@ permissions:
 
 jobs:
   windows:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version:
@@ -37,20 +38,10 @@ jobs:
       - name: Install and upgrade packaging tools
         run: python -m pip install --upgrade pip setuptools wheel
       - run: python -m pip install -r tests/requirements/py3.txt -e .
+    #   - name: Instrument code
+    #     uses: AryazE/auto-dylin/instrument@main
       - name: Run tests
         run: python tests/runtests.py -v2
-
-  javascript-tests:
-    runs-on: ubuntu-latest
-    name: JavaScript tests
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: '**/package.json'
-      - run: npm install
-      - run: npm test
+    #   - name: Report results
+    #     if: always()
+    #     uses: AryazE/auto-dylin/report@main
