--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,8 @@ jobs:
           - '3.12'
     name: Windows, SQLite, Python ${{ matrix.python-version }}
     steps:
+      - name: Install deps
+        run: sudo apt-get install -y libmemcached-dev
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Python
